Issue 34762: Invalid sign-in should be more descriptive Issue 34764: Checkboxes on member details survey look broken on chrome

--- a/webapp/frontPage/css/application.css
+++ b/webapp/frontPage/css/application.css
@@ -363,4 +363,6 @@ a.register-links-error:hover {cursor: pointer;}
 
 .front-page-popup-container .form .survey-form input {width:100%; padding: 0.3em;}
 
+.front-page-popup-container .form .survey-form input[type=checkbox] {width: auto;}
+
 .front-page-popup-container .form .survey-form input#accountothernetwork {width:93%; margin-left: 2em;}
